--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -151,7 +151,7 @@ html(lang="en")
 								, estas son las opciones que tenemos para tí:
 				.row.aOb
 					.col-md-offset-1.col-md-10
-						.col-md-7
+						.col-md-6
 							.bqplanes.a.active
 								.row
 									.col-md-8
@@ -161,23 +161,43 @@ html(lang="en")
 												label(for='radio-1')
 												span	Plan A
 									.col-md-4
-										h2 $3,000.°°
+										h2 
+											span $3,000.°°
 								.row
-									.col-md-12
-										ul
-											h3 Coberturas
-											li Por daños al inmueble
+									.col-md-7
+										h3 Coberturas
+									.col-md-5
+										br
+										h5 % Suma asegurada
+									.col-md-7
+										h6 Por daños al inmueble
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true",class="naranja-tooltip",title='Cuando el daño se presenta por: <ul> <li> Incendio</li> <li> Daños causados por tormentas e inundaciones, granizo de gran tamaño, nevadas (daños hidrometeorológicos)</li> <li> Más un 20% adicional de la suma asegurada para remover escombros</li> <li> Más 20% adicional de la suma asegurada para gastos extraordinarios (de hospedaje, almacenamiento de tus pertenencias entre otros)</li> </ul>')
-											li Por daños a los contenidos
+									.col-md-5
+										h5 $ 900,000.°°
+									.col-md-7
+										h6 Por daños a los contenidos
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true", title='Cuando el daño se presenta por: <ul> <li> Incendio </li> <li> Daños causados por tormentas e inundaciones, granizo de gran tamaño, nevadas (daños hidrometeorológicos) </li> </ul>',class="naranja-tooltip")
-											li Por robo
+									.col-md-5
+										h5 $ 450,000.°°
+									.col-md-7
+										h6 Por robo
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true", title='Aplica para: <ul> <li> Articulos de uso doméstico </li> <li> Muebles </li> <li> Dinero en efectivo (hasta el 5% de la suma asegurada por robo) </li> <li> Objetos de difícil reposición </li> </ul>',class="naranja-tooltip")
-											li Por rotura de cristales
-											li Por responsabilidad civil privada y familiar
-											li Por equipo electrónico
-											br
-										h4.text-center Ver detalle del producto
-						.col-md-5
+									.col-md-5
+										h5 $ 90,000.°°
+									.col-md-7
+										h6 Por rotura de cristales
+									.col-md-5
+										h5 $ 90,000.°°
+									.col-md-7
+										h6 Por responsabilidad civil privada y familiar
+									.col-md-5
+										h5 $ 900,000.°°
+									.col-md-7
+										h6 Por daños al equipo electrónico
+									.col-md-5
+										h5 $ 180,000.°°
+										br
+						.col-md-6
 							.bqplanes.b
 								.row
 									.col-md-8
@@ -187,21 +207,44 @@ html(lang="en")
 												label(for='radio-2')
 												span	Plan B
 									.col-md-4
-										h2 4,500.°°
+										h2
+											span 4,500.°°
 								.row
-									.col-md-12
-										ul
-											h3.text-left Cobertura
-											li Por daños al inmueble
+									.col-md-7
+										h3.text-left Cobertura
+									.col-md-5
+										br
+										h5 % suma asegurada
+									.col-md-7
+										h6 Por daños al inmueble
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true",class="naranja-tooltip",title='Cuando el daño se presenta por: <ul> <li> Incendio</li> <li> Daños causados por tormentas e inundaciones, granizo de gran tamaño, nevadas (daños hidrometeorológicos)</li> <li> Más un 20% adicional de la suma asegurada para remover escombros</li> <li> Más 20% adicional de la suma asegurada para gastos extraordinarios (de hospedaje, almacenamiento de tus pertenencias entre otros)</li> </ul>')
-											li Por daños a los contenidos
+									.col-md-5
+										
+										h5 $ 900,000.°°
+									.col-md-7
+										h6 Por daños a los contenidos
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true", title='Cuando el daño se presenta por: <ul> <li> Incendio </li> <li> Daños causados por tormentas e inundaciones, granizo de gran tamaño, nevadas (daños hidrometeorológicos) </li> </ul>',class="naranja-tooltip")
-											li Por robo
+									.col-md-5
+										h5 $ 450,000.°°
+									.col-md-7
+										h6 Por robo
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true", title='Aplica para: <ul> <li> Articulos de uso doméstico </li> <li> Muebles </li> <li> Dinero en efectivo (hasta el 5% de la suma asegurada por robo) </li> <li> Objetos de difícil reposición </li> </ul>',class="naranja-tooltip")
-											li Por rotura de cristales
-											li Por responsabilidad civil privada y familiar
-											li Por equipo electrónico
-										h4.text-center Ver detalle del producto
+									.col-md-5
+										h5 $ 90,000.°°
+									.col-md-7
+										h6 Por rotura de cristales
+									.col-md-5
+										h5 $ 90,000.°°
+										h5 % suma asegurada
+									.col-md-7
+										h6 Por responsabilidad civil privada y familiar
+									.col-md-5
+										h5 h5 $ 900,000.°°
+									.col-md-7
+										h6 Por daños al equipo electrónico
+									.col-md-5
+										br
+										h5 $ 180,000.°°
 				
 				.row.plus
 					.col-md-offset-1.col-md-10
@@ -215,23 +258,42 @@ html(lang="en")
 												label(for='radio-Plus')
 												span	Plan Plus
 									.col-md-4
-										h2 $3,000.°°
+										h2 
+											span $3,000.°°
 								.row
-									.col-md-12
-										ul
-											h3 Coberturas
-											li Por daños al inmueble
+									.col-md-7
+										h3 Coberturas
+									.col-md-5
+										br
+										h5 % suma asegurada
+									.col-md-7
+										h6 Por daños al inmueble
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true",class="naranja-tooltip",title='Cuando el daño se presenta por: <ul> <li> Incendio</li> <li> Daños causados por tormentas e inundaciones, granizo de gran tamaño, nevadas (daños hidrometeorológicos)</li> <li> Más un 20% adicional de la suma asegurada para remover escombros</li> <li> Más 20% adicional de la suma asegurada para gastos extraordinarios (de hospedaje, almacenamiento de tus pertenencias entre otros)</li> </ul>')
-											li Por daños a los contenidos
+									.col-md-5
+										h5 $ 900,000.°°
+									.col-md-7
+										h6 Por daños a los contenidos
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true", title='Cuando el daño se presenta por: <ul> <li> Incendio </li> <li> Daños causados por tormentas e inundaciones, granizo de gran tamaño, nevadas (daños hidrometeorológicos) </li> </ul>',class="naranja-tooltip")
-											li Por robo
+									.col-md-5
+										h5 $ 450,000.°°
+									.col-md-7
+										h6 Por robo
 												span.ayuda.azul(data-toggle='tooltip', data-placement='right', data-html="true", title='Aplica para: <ul> <li> Articulos de uso doméstico </li> <li> Muebles </li> <li> Dinero en efectivo (hasta el 5% de la suma asegurada por robo) </li> <li> Objetos de difícil reposición </li> </ul>',class="naranja-tooltip")
-											li Por rotura de cristales
-											li Por responsabilidad civil privada y familiar
-											li Por equipo electrónico
-											br
-										h4.text-center Ver detalle del producto
-
+									.col-md-5
+										h5 $ 90,000.°°
+									.col-md-7
+										h6 Por rotura de cristales
+									.col-md-5
+										h5 $ 90,000.°°
+									.col-md-7
+										h6 Por responsabilidad civil privada y familiar
+									.col-md-5
+										h5 $ 900,000.°°
+									.col-md-7
+										h6 Por daños al equipo electrónico
+									.col-md-5
+										h5 $ 180,000.°°
+									br
 				.row
 					.col-md-offset-1.col-md-10.bggris.planes
 						.a
@@ -680,31 +742,55 @@ html(lang="en")
 								h1 Plan B
 							.col-md-6
 								h1 $3,000.°°
-							.col-md-12
+							.col-md-7
 								h4 Coberturas
-								h3 - Incendio y / o rayo
-								h3 - Terremoto y/o erupción volcánica (Única Cobertura Opcional)
-								h3 - Riesgos Hidrometeorológicos
+							.col-md-5
+								h4 % Suma Asegurada
+							.col-md-7
+								h3 - Por daños al inmueble
+							.col-md-5
+								h3 $ 900,000.00
+							.col-md-7
+								h3 - Por daños a los contenidos
+							.col-md-5
+								h3 $ 450,000.00
+							.col-md-7
+								h3 - Por robo
+							.col-md-5
+								h3 $ 90,000.00
+							.col-md-7
+								h3 - Por rotura de cristales
+							.col-md-5
+								h3 $ 90,000.00
+							.col-md-7
+								h3 - Por responsabilidad civil privada y familiar
+							.col-md-5
+								h3 $ 900,000.00
+							.col-md-7
+								h3 - Por daños al equipo electrónico
+							.col-md-5
+								h3 $ 180,000.00
+							.col-md-12
 								hr
 							.col-md-12
-								.col-md-6
+								.col-md-7
 									h5 Periodo:
-								.col-md-6
+								.col-md-5
 									h6 Mensual
 							.col-md-12
-								.col-md-6
+								.col-md-7
 									h5 Primer pago:
-								.col-md-6
+								.col-md-5
 									h6 $ 250.°°
 							.col-md-12
-								.col-md-6
+								.col-md-7
 									h5 11 pagos subsecuentes de:
-								.col-md-6
+								.col-md-5
 									h6 $ 250.°°
 							.col-md-12
-								.col-md-6
+								.col-md-7
 									h5 Total a pagar:
-								.col-md-6
+								.col-md-5
 									h6 $ 3,000.°°	
 									.space
 							.col-md-12.text-center
@@ -744,17 +830,16 @@ html(lang="en")
 		.container
 			.row
 				h2 PAGO DE CONTRATACIÓN
-		.container.bgazul2.contrata
+		.container.bgwhite
 			.row
-				.col-md-offset-1.col-md-10
-					.col-md-6
-						h2.subt RESUMEN DE CONTRATACIÓN
-					.col-md-5.bgazul5
-						.col-md-offset-1.col-md-8
-							.col-xs-8
-								h6 No. de cotización.
-							.col-xs-4.text-right
-								h4 123456789A
+				.col-md-offset-1.col-md-6
+					h2.subt RESUMEN DE CONTRATACIÓN
+				.col-md-4.bgazul1.poliza
+					.col-xs-7
+						h4 No. de cotización.
+					.col-xs-5.text-right
+						h4 123456789A
+		.container.bgazul3.contrata
 			.row
 				.col-md-offset-1.col-md-10
 					.col-md-12
@@ -783,7 +868,7 @@ html(lang="en")
 					.col-md-12
 						h4 DOMICILIO DEL CONTRATANTE
 						P.dato.wig Exploradores Tonatiuh No. 304, Col. Alamos, C.p. 034500, Bénito Juárez, CDMX.
-		.container.bgazul3.resumen
+		.container.bgazul2.resumen
 			.row
 				.col-md-offset-1.col-md-10
 					.col-md-12
@@ -883,14 +968,23 @@ html(lang="en")
 				.row
 					.col-md-offset-1.col-md-10
 						.col-md-12
-							h4 COMPRAR
+							input(type="checkbox",id="checkbox-Acepto" class="regular-checkbox big-checkbox")
+							label(for="checkbox-Acepto")
+							span.labelgral He leído y acepto los términos y condiciones del contrato	
+								a(target="_BLANK",href="#") condiciones generales
 				.row
 					.col-md-offset-1.col-md-10
 						.col-md-12
-							input(type="checkbox",id="checkbox-Acepto" class="regular-checkbox big-checkbox")
-							label(for="checkbox-Acepto")
-							span.acepto Acepto los	
-								a(target="_BLANK",href="#") Términos y condiciones
+							input(type="checkbox",id="checkbox-Acepto1" class="regular-checkbox big-checkbox")
+							label(for="checkbox-Acepto1")
+							span.labelgral Acepto el envío los documentos de contrato y la póliza de seguro a mi correo electrónico
+				.row
+					.col-md-offset-1.col-md-10
+						.col-md-12
+							input(type="checkbox",id="checkbox-Acepto2" class="regular-checkbox big-checkbox")
+							label(for="checkbox-Acepto2")
+							span.labelgral Acepto el pago automático mensual con cargo a mi cuenta	
+								a(target="_BLANK",href="#")  formato de domiciliación
 				.row
 					br
 					.col-md-offset-1.col-md-10
@@ -978,6 +1072,13 @@ html(lang="en")
 							.col-md-10
 								p.labelgral Institución bancaria*
 								input.acepto1#contrata.form-control(type='text' placeholder='Banamex',nombre='')
+				.row
+					.col-md-offset-1.col-md-10.bgazul7
+						.col-md-12.text-center
+							h5.compra Confirmo que los datos que ingresé son correctos y verídicos, en caso de alguna omisión, ésta dará lugar a la terminación y pérdida de beneficios del contrato.
+							h5.compra Acepto la contratación y el cobro del Seguro.
+						.col-md-11
+							.space
 				.row
 					br
 					.col-md-offset-1.col-md-10
