--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -448,11 +448,7 @@ ul.list-group{
 			color: #FFFFFF;
 		}
 	}
-}
-.bgazul3{
-	background: rgba(0, 110, 193, 0.50);
-	border-bottom: 1px solid #fff;
-	&.resumen{
+		&.resumen{
 	h4{
 		color:$azul6;
 		font-family: StagSans-Book;
@@ -476,6 +472,30 @@ ul.list-group{
 			font-size: 12px;
 			color: #FAFAFA;
 		}
+	}
+}
+.bgazul3{
+	background: rgba(0, 110, 193, 0.50);
+	border-bottom: 1px solid #fff;
+	h4{
+		color:$azul6;
+	}
+	p.labelgral{
+		color:$azul6;
+		font-family: StagSans-Book;
+		font-size: 14px;
+		line-height: 24px;
+	}	
+	p.dato{
+		font-family: StagSans-Book;
+		font-size: 18px;
+		color: #FFFFFF;
+		line-height: 24px;
+	}
+	p.dato.wig{
+		font-family: StagSans-Medium;
+		font-size: 20px;
+		color: #FFFFFF;	
 	}
 }
 .bgazul4{
@@ -662,26 +682,27 @@ ul.list-group{
 	}
 	& .a.active{
 		.triangulo{
-		width: 0; 
-     	height: 0; 
-	    border-left: 48px solid #fff;
-	    border-top: 39px solid transparent;
-	    border-bottom: 40px solid transparent;
-	    position: relative;
-	    transform: rotate(90deg);
-	    left: -320px;
+		    width: 0;
+		    top: -25px;
+		    height: 0;
+		    border-left: 48px solid #fff;
+		    border-top: 39px solid transparent;
+		    border-bottom: 40px solid transparent;
+		    position: absolute;
+		    transform: rotate(90deg);
+		    left: -320px;
 		}
 	}
 	& .b.active{
 		.triangulo{
-		width: 0; 
-     	height: 0; 
-	    border-left: 48px solid #fff;
-	    border-top: 39px solid transparent;
-	    border-bottom: 40px solid transparent;
-	    position: relative;
-	    transform: rotate(90deg);
-	    right: -330px;
+		    width: 0;
+		    height: 0;
+		    border-left: 48px solid #fff;
+		    border-top: 39px solid transparent;
+		    border-bottom: 40px solid transparent;
+		    position: absolute;
+		    transform: rotate(90deg);
+		    right: 180px;
 		}
 	}
 	& .c.active{
@@ -691,7 +712,7 @@ ul.list-group{
 	    border-left: 48px solid #fff;
 	    border-top: 39px solid transparent;
 	    border-bottom: 40px solid transparent;
-	    position: relative;
+	    position: absolute;
 	    transform: rotate(90deg);
 	    left: 0px;
 		}
@@ -782,15 +803,18 @@ ul.list-group{
 		color:$azul3;
 	    text-decoration: underline;
 	    font-weight: 600;
+	}
+	h5{
+		color:$azul2;
+		font-size: 	18px;
+		font-family: StagSans-Medium;
 	}	
-	ul{
-		li{
-			padding-bottom: 10px;
-			color: $azul3;
-			font-size: 21px;
-			list-style-type: circle;
-			font-family: StagSans-Book;
-		}
+	h6{
+		padding-bottom: 10px;
+		color: $azul3;
+		font-size: 21px;
+		list-style-type: circle;
+		font-family: StagSans-Book;
 	}
 	span{
 		font-size: 30px;
@@ -807,7 +831,13 @@ ul.list-group{
 		}
 		h4{
 			color:#fff;
+		}
+		h5{
+			color:$azul5;
 		}	
+		h6{
+			color:#fff;
+		}
 		ul{
 			li{
 				color: #fff;	
@@ -982,5 +1012,11 @@ input, select, textarea {
 		font-family: StagSans-Book;
 		font-size: 18px;
 		color: #094FA4;
+	}
+	.compra{
+		font-family: StagSans-Book;
+		font-size: 18px;
+		color: $azul2;
+		font-weight: 100;
 	}
 }
