--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -882,19 +882,39 @@ html(lang="en")
 						h1 $3,000.°°
 			.row
 				.col-md-offset-1.col-md-10
-					.col-md-3
-						h4 Cobertura
-						h6 - Incendio y / o rayo
-						h6 - Terremoto y/o erupción volcánica (Única Cobertura Opcional)
-						h6 - Terremoto y/o erupción volcánica (Única Cobertura Opcional)
-						h6 - Riesgos Hidrometeorológicos					
+					.col-md-4
+						.col-md-12
+							.col-md-6
+								h4 Cobertura
+							.col-md-6
+								h4 Suma asegurada
+						.col-md-12
+							.col-md-6
+								h6 - Incendio y / o rayo
+							.col-md-6
+								h6 $9000.00
+						.col-md-12
+							.col-md-6
+								h6 - Terremoto y/o erupción volcánica (Única Cobertura Opcional)
+							.col-md-6
+								h6 $900.00
+						.col-md-12
+							.col-md-6
+								h6 - Terremoto y/o erupción volcánica (Única Cobertura Opcional)
+							.col-md-6
+								h6 $900.00
+						.col-md-12
+							.col-md-6
+								h6 - Riesgos Hidrometeorológicos				
+							.col-md-6
+								h6 $9000.00
 					.col-md-2
-						h4 Periodo
-						p.dato Mensual
+							h4 Periodo
+							p.dato Mensual
 					.col-md-2
 						h4 Primer pago
 						p.dato $250.00
-					.col-md-3
+					.col-md-2
 						h4 11 pagos subsecuentes de
 						p.dato $250.00
 					.col-md-2
