--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -38,7 +38,7 @@ $h2SubColor:$gris2;
 
 $spriteurl:url(../assets/img/sprite.png);
 $imgExito:url(../assets/img/ico_poliza_exito.png);
-$imgExito1:url(../assets/img/ico_aviso.png);
+$imgExito1:url(../assets/img/ico_aviso2.png);
 $imgExito2:url(../assets/img/ico_comprobante.png);
 $selectMenu:url(../assets/img/select_menu.png);
 $stepspanbg:$gris4;
@@ -856,6 +856,13 @@ ul.list-group{
 		font-size: 20px;
 		color: #B5E5F9;
 	}
+	.exito1{
+		background-image: $imgExito1;
+		background-repeat: no-repeat;
+		height: 28px;
+		margin-top: -1px;
+		background-position: right;
+	}		
 }
 .bqblanco{
 	background:$azul5;
