--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -506,19 +506,19 @@ html(lang="en")
 								h1 Deja protegidos a tus seres queridos en caso de que llegues a faltar
 							.col-md-12
 								.col-md-6
-									h3 Suma asegurada por fallecimiento
+									h3 Por fallecimiento
 								.col-md-6
 									br
 									h4 $ 250,000.°°
 							.col-md-12
 								.col-md-6
-									h3 Suma asegurada por muerte accidental
+									h3 Por muerte accidental
 								.col-md-6
 									br
 									h4 $ 120,000.°°
 							.col-md-12
 								.col-md-6
-									h3 Suma asegurada para gastos funerarios
+									h3 Para gastos funerarios
 								.col-md-6
 									br
 									h4 $ 280,000.°°
@@ -957,11 +957,6 @@ html(lang="en")
 			.row
 				.space
 				.space
-			.row
-				.col-md-12
-					.col-md-1.text-right.info.exito1
-					.col-md-10
-						h5 Aplican restricciones y exlusiones, para dudas y aclaraciones, ingresa a www.segurosbancomer.com o llama al Centro de Servicio al Cliente: CDMX y zona metropolitana 11020000, interior de la República (0155) 11020000
 			.space
 		.container.bgwhite
 			.row
@@ -979,6 +974,11 @@ html(lang="en")
 					button.btn-lg.btn-solid DESCARGAR PDF
 				.col-md-12.text-center
 					br
+			.row.contrata
+				.col-md-12
+					.col-md-1.exito1
+					.col-md-10
+						span Aplican restricciones y exlusiones, para dudas y aclaraciones, ingresa a www.segurosbancomer.com o llama al Centro de Servicio al Cliente: CDMX y zona metropolitana 11020000, interior de la República (0155) 11020000
 		hr
 
 
