--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -20,8 +20,8 @@ $gris7:#4a4a4a;
 $gris8:#6C6F73;
 $gris9:#B5B7B9; 
 
-$fontDefault:'StagSans-Book';
-$h4Family:'StagSans-Medium';
+$fontDefault:arial;
+$h4Family:StagSans-Medium;
 $h4Size:19px;
 $h4Color:$azul1;
 $pLabelFamily:'StagSans-Light';
