--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -1139,13 +1139,6 @@ html(lang="en")
 			.row
 				.space
 				.space
-			.row
-				.col-md-offset-1.col-md-10
-					.col-md-12
-						.col-md-1.text-right.info.exito1
-							
-						.col-md-11
-							h5 Aplican restricciones y exlusiones, para dudas y aclaraciones, ingresa a www.segurosbancomer.com o llama al Centro de Servicio al Cliente: CDMX y zona metropolitana 11020000, interior de la República (0155) 11020000
 			.space
 		.container.bgwhite
 			.row
@@ -1160,9 +1153,16 @@ html(lang="en")
 			.row
 				.space
 				.col-md-12.text-center
+					br
 					button.btn-lg.btn-solid DESCARGAR PDF
-				.space
-				.space
+				.col-md-12
+					br
+					.space
+			.row.contrata
+				.col-md-12
+					.col-md-1.exito1
+					.col-md-10
+						span Aplican restricciones y exlusiones, para dudas y aclaraciones, ingresa a www.segurosbancomer.com o llama al Centro de Servicio al Cliente: CDMX y zona metropolitana 11020000, interior de la República (0155) 11020000
 		hr
 
 	script(src="http://code.jquery.com/jquery.js")
