--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -951,11 +951,13 @@ html(lang="en")
 					.col-md-11
 						.space
 			.row
+				.space
 				.col-md-12.text-center
 					br
 					button.btn-lg.btn-solid DESCARGAR PDF
-				.col-md-12.text-center
+				.col-md-12
 					br
+					.space
 			.row.contrata
 				.col-md-12
 					.col-md-1.exito1
